# tree-sitter-grammar

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bindings/c/: tree-sitter-morloc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_morloc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMorloc/: morloc.h
bindings/swift/TreeSitterMorlocTests/: TreeSitterMorlocTests.swift
code-samples/: sample.loc
examples/: hell.loc  sample-1.loc  sample.loc  types.loc
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  declaration.txt  import.txt  instance.txt  modules.txt  signature.txt  source.txt  typeclass.txt  typedef.txt
