[package]
name = "tree-sitter-morloc"
description = "A parser for the Morloc language"
version = "0.1.0"
authors = ["Zebulun Arendsee <z@morloc.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "morloc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/morloc-project/morloc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
